# RAG-a-muffin

./: Makefile  TODO.md  docker-compose.yml
backend/: .env.example  pyproject.toml  schema.prisma
backend/app/: db.py  main.py
backend/app/core/: config.py
backend/app/modules/auth/: router.py  service.py
backend/app/modules/collection/: model.py  router.py  service.py
backend/app/modules/document/: embedding.py  extraction.py  generation.py  model.py  router.py  service.py
backend/app/modules/user/: model.py  router.py  service.py
backend/migrations/20260318100257_add_documents_and_collections/: migration.sql
backend/migrations/20260323120000_add_document_structure_fields/: migration.sql
backend/migrations/20260323133000_move_document_chunks_to_document_chunk_table/: migration.sql
backend/migrations/20260323150000_add_document_chunk_embeddings/: migration.sql
backend/migrations/20260323170000_add_collection_latest_answer_fields/: migration.sql
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx
frontend/src/components/: login-form.tsx
