[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.135.1",
    "prisma>=0.15.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "starlette>=0.52.1",
    "uvicorn[standard]>=0.41.0",
]
